<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_products">Delete all Products</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Toast message with failed adding product [CHAR LIMIT=20] -->
    <string name="editor_insert_product_failed">Failed to add product</string>

    <!-- Toast message with successful adding product [CHAR LIMIT=20] -->
    <string name="editor_insert_product_successful">Product added successfully</string>

    <!-- Toast message with failed updating product [CHAR LIMIT=20] -->
    <string name="editor_update_product_failed">Failed to update product</string>

    <!-- Toast message with successful updating product [CHAR LIMIT=20] -->
    <string name="editor_update_product_successful">Product updated successfully</string>

    <!-- Toast message with failed deleting product [CHAR LIMIT=20] -->
    <string name="editor_delete_product_failed">Failed to delete product</string>

    <!-- Toast message with success deleting product [CHAR LIMIT=20] -->
    <string name="editor_delete_product_successful">Product deleted successfully</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="product_details">Product Details</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="product_quantity">Quantity</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="product_supplier">Supplier</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Name</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_contact">Contact number</string>

    <!-- Unsaved dialog message [CHAR LIMIT=30] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Delete dialog message [CHAR LIMIT=30] -->
    <string name="delete_dialog_msg">Do you want to delete this product?</string>

    <!-- Alert dialog action [CHAR LIMIT=30] -->
    <string name="discard">Discard</string>

    <!-- Alert dialog action [CHAR LIMIT=30] -->
    <string name="keep_editing">Continue editing</string>

    <!-- Alert dialog action [CHAR LIMIT=30] -->
    <string name="delete">Delete</string>

    <!-- Alert dialog action [CHAR LIMIT=30] -->
    <string name="cancel">Cancel</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Welcome to Inventory app</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

</resources>
